fix: update padding for date filters to stack vertically on mobile

--- a/src/app/components/shared/selectors/date-range/date-range.component.scss
+++ b/src/app/components/shared/selectors/date-range/date-range.component.scss
@@ -7,3 +7,11 @@
 .date-input-field {
   width: 49%;
 }
+
+.full-width {
+  width: 100%;
+}
+
+.stack-vertically {
+  flex-direction: column;
+}
